# python-project-template

./: .gitignore  .gitmessage  .pre-commit-config.yaml  README.md  pyproject.toml
src/: example.py
tests/: test_example.py
